--- a/_posts/2025-07-22-Combined.md
+++ b/_posts/2025-07-22-Combined.md
@@ -3,6 +3,16 @@ title: "Software Setup (Merged)"
 date: 2025-07-18
 ---
 
+# Table of Contents
+
+- [1.1 Recommended Directory Structure](#11-recommended-directory-structure)
+- [1.2 Setting Up Git, GitHub, and SSH](#12-setting-up-git-github-and-ssh)
+- [1.3 Create Initial Directory Structure](#13-create-initial-directory-structure)
+- [1.4 OCR Docker](#14-ocr-docker)
+
+
+
+
 # 1.1 Recommended Directory Structure
 
 ```
@@ -266,7 +276,7 @@ ls
 dev_ws  ocr-docker  training_ws
 ```
 
-# ocr-docker
+# 1.4 OCR Docker
 
 <div class="important">
   <strong>Important:</strong> If you have already installed the container, skip to 
