--- a/_posts/2025-07-22-Combined.md
+++ b/_posts/2025-07-22-Combined.md
@@ -9,8 +9,7 @@ date: 2025-07-18
 - [1.2 Setting Up Git, GitHub, and SSH](#12-setting-up-git-github-and-ssh)
 - [1.3 Create Initial Directory Structure](#13-create-initial-directory-structure)
 - [1.4 OCR Docker](#14-ocr-docker)
-
-
+- [1.5 Differential Drive Robot](#15-differential-drive-robot)
 
 
 # 1.1 Recommended Directory Structure
@@ -34,195 +33,100 @@ date: 2025-07-18
        └── src/
 ```
 
+
 # 1.2 Setting Up Git, GitHub, and SSH
 
 ## Install Git
 
-### Installing on Windows
+### *Mac*
+- Install homebrew and follow the terminal instructions
+
+```bash
+/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+```
+
+- Install git
+
+```bash
+brew install git
+```
+
+### *Windows*
 
 - Install [Git for Windows](https://gitforwindows.org/), which provides Git Bash (terminal emulator for running Git commands)
   
-- Or, install using Windows Powershell~~
+- Or- install using Windows Powershell
 ```bash
 winget install --id Git.Git -e --source winget
 ```
 
-- You can also install Linux for Windows via [WSL (Windows Subsystem for Linux)](https://learn.microsoft.com/en-us/windows/wsl/install)
-  - Once setup, Git can be installed using the Linux package manager
+- Note: if the above command didn't work, you may need to install [winget](https://chxtio.github.io/ocr_jekyll/) first
 
-### Installing on Linux
-https://git-scm.com/book/en/v2/Getting-Started-Installing-Git
+```bash
+$progressPreference = 'silentlyContinue'
+Write-Host "Installing WinGet PowerShell module from PSGallery..."
+Install-PackageProvider -Name NuGet -Force | Out-Null
+Install-Module -Name Microsoft.WinGet.Client -Force -Repository PSGallery | Out-Null
+Write-Host "Using Repair-WinGetPackageManager cmdlet to bootstrap WinGet..."
+Repair-WinGetPackageManager
+Write-Host "Done."
+```
+
+- You can also install Linux for Windows via [WSL (Windows Subsystem for Linux)](https://learn.microsoft.com/en-us/windows/wsl/install)
+  - Once setup, Git can be installed using the Linux package manager 
+
+### *Ubuntu*
+
 - Install Git
-  ```bash
-  sudo apt install git
-  ```
+
+```bash
+sudo apt install git
+```
 
 ## Configure Git
 - Configure Git, replacing `"Your name"` and `"your.email@example.com"` with your info (including the quotes) to link your local Git profile with GitHub
 
-  ```bash
-  git config --global user.name "Your Name"
-  git config --global user.email "your.email@example.com"
-  ```
+```bash
+git config --global user.name "Your Name"
+git config --global user.email "your.email@example.com"
+```
 
 - Verify configuration
   
-  ```bash
-  git config --get user.name
-  git config --get user.email
-  # List all settings
-  git config --list
-  ```
-
-## Basic Git Workflow Example
-### Creating a local repository
-- Create a local repository `myTest` and change the current working directory to `myTest`:
-  
-  ```bash
-  mkdir myTest && cd myTest
-  ```
-
-- Initialize a `.git` subdirectory in the current working directory
-  - Contains a hidden `.git` folder with subdirectories for objects, refs, and template files
-  - A HEAD file is also created which will point to the currently checked out commit
-  
-  ```bash
-  git init
-  ```
-
-  - If successful, you'll see a message like:
-
-  ```
-  Initialized empty Git repository in /home/user/Mytest/.git/
-  ```
-
-- Check the current state of the working directory and the staging area.
-  - Shows which changes have been staged, which haven’t, and which files aren’t being tracked by Git.
-  ```bash
-  git status
-  ```
-
-- Create a README file to describe the repository:
-  - We will use nano (`sudo apt install nano`), a simple, user-friendly text editor for the command line
-  ```bash
-  nano README.md
-  # Add some text, example:
-  This is a git repo
-  # Save the file by pressing CTRL + X, then Y, then press Enter
-  ```
-- Optional: Create a `sample.c` file:
-
-  ```c
-  #include<stdio.h>
-  int main()
-  {
-      printf("hello world");
-      return 0;
-  }
-  ```
-
-### Staging Files in the Git Index
-
-- Create and add files to the index. 
-
-  ```bash
-  git add README.md
-  git add sample.c
-  ```
-### Committing changes made to the index
-- Commit the changes with a message:
-
-  ```bash
-  git commit -m "Initial commit"
-  ```
-##  Creating a repository on GitHub
-- Create a repository on GitHub with the same name as your local repository (e.g., "Mytest").
-![picture 0](https://i.imgur.com/6hpahg2.png)
-
-- Connect your local repository to the GitHub repository (Replace `'user_name'` with your GitHub username):
-
-*Using HTTPS:*
-  ```bash
-  git remote add origin https://github.com/user_name/Mytest.git
-  ```
-*Or using SSH (recommended if you have an [SSH key](#creating-an-ssh-key) set up):*
 ```bash
-git remote add origin git@github.com:user_name/Mytest.git
-```
+git config --get user.name
+git config --get user.email
+  ```
 
-## Pushing files from a local repository to a GitHub repository
-- Push the local repository contents to GitHub
-  - The first time running this command, you need to link the local `master` branch to the `master` branch on remote repository (`origin`)
+## Set up SSH
+- Create a new SSH key using your GitHub email as a label
+
+**Note: Press enter to skip through the 3 prompts that follow**
 
 ```bash
-git push -u origin master
-# Can also use `git push --set-upstream origin master`
-
-# Note: Some repositories may use 'main' as the default branch instead of 'master'.
-# In that case, use the following command:
-# git push --set-upstream origin main
+ssh-keygen -t ed25519 -C "your.email@example.com"
 ```
 
-  - For subsequent pushes
-  ```bash
-git push origin master
+- Copy the public key to your GitHub account (See [example](https://github.com/Training-Dummy/howtoforge_git_ubuntu/blob/master/README.md#creating-an-ssh-key))
 
-# Or if your default branch is 'main':
-# git push origin main
-  ```
-  - You may get a `permission denied` error when pushing to GitHub if SSH keys aren't set properly (See [Creating an SSH Key](#creating-an-ssh-key))
+```bash
+cat ~/.ssh/id_ed25519.pub
+```
 
-- Enable colorful output with git
-
-  ```bash
-  git config --global color.ui auto
-  ```
----
-## Creating an SSH Key
-[Create an SSH key](https://www.theodinproject.com/lessons/foundations-setting-up-git#step-23-create-an-ssh-key)
-![ssh diagram](https://www.ssh.com/hubfs/Imported_Blog_Media/SSH_simplified_protocol_diagram-2.png)
-
-An SSH key is a cryptographically secure identifier. It’s like a really long password used to identify your machine, which can be used by GitHub without having to type in your username and password every time.
+- In GitHub, navigate to [**Settings -> SSH and GPG keys -> New SSH Key**](https://github.com/settings/ssh/new) and paste it there ([example](https://camo.githubusercontent.com/6d19b54f3f16f98804e3b33804d6eb2fa82fb2e796dbce825f8cba2f4b3f74a3/68747470733a2f2f692e696d6775722e636f6d2f676466624a4b6a2e706e67))
 
 
-- [Check for Existing SSH Keys](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/checking-for-existing-ssh-keys)
-  - Check for the presence of Ed25519 algorithm SSH keys
-  - An error indicates you do not have an existing SSH key pair in the default location.
-  ```bash
-  ls ~/.ssh/id_ed25519.pub
-  ```
-- [Generate a New SSH Key on Your Local Machine and Add it to the SSH Agent](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent)
-  - Run the following command in the terminal to create a new SSH key using your GitHub email as a label:
-  ```bash
-  ssh-keygen -t ed25519 -C "your.email@example.com"
-  ```
-  - When you're prompted to "Enter a file in which to save the key", you can press Enter to accept the default file location
-  ```
-  > Enter file in which to save the key (/c/Users/YOU/.ssh/id_ALGORITHM):[Press enter]
-  ```
-  ```
-  > Generating public/private ed25519 key pair.
-  ```
+- Confirm that your SSH key is connected to your GitHub account
 
-  - Show the SSH key and copy it to your clipboard:
-  ```bash
-  cat ~/.ssh/id_ed25519.pub
-    ```
+```bash
+ssh -T git@github.com
+```
 
-- **Link SSH Key with GitHub to enable authentication for Git operations over SSH**
-    - In GitHub, navigate to [**Settings -> SSH and GPG keys -> New SSH Key**](https://github.com/settings/ssh/new): 
-    - Name the key with a useful description of where it came from.
-    - Use the output of `cat ~/.ssh/id_ed25519.pub` and paste it the Key section
-    ![picture 2](https://i.imgur.com/gdfbJKj.png)  
+- if successful, you should see:
 
-    - Confirm that your SSH key is connected to your GitHub account
-    ```bash
-    ssh -T git@github.com
-    ```
-    - if successful, you should see:
-    ```
-    Hi username! You've successfully authenticated, but GitHub does not provide shell access.
-    ```
+```
+Hi username! You've successfully authenticated, but GitHub does not provide shell access.
+```
 
 # 1.3 Create Initial Directory Structure
 
@@ -231,13 +135,13 @@ An SSH key is a cryptographically secure identifier. It’s like a really long p
 ```
 ~/ocr/
 │
-├── dev\_ws/
+├── dev_ws/
 │   └── src/
 │
 ├── ocr-docker/
 │
-└── training\_ws/
-└── src/
+├── training_ws/
+│   └── src/
 ```
 
 1\. Create `ocr` folder and cd into it
@@ -276,11 +180,12 @@ ls
 dev_ws  ocr-docker  training_ws
 ```
 
+
 # 1.4 OCR Docker
 
 <div class="important">
   <strong>Important:</strong> If you have already installed the container, skip to 
-  <a href="#step-2-run-the-docker-container">Step 2: Run the docker container</a>.
+  <a href="#step-3-run-the-docker-container">Step 3: Run the docker container</a>.
 </div>
 <br/>
 
@@ -292,14 +197,14 @@ dev_ws  ocr-docker  training_ws
 
 - Install and open [Docker Desktop](https://docs.docker.com/desktop/)
 
-- Clone the repo and cd into it
+- Clone the [repo](https://github.com/oc-robotics/ocr-docker) and cd into it
 
 ```bash
 cd ocr
 git clone https://github.com/oc-robotics/ocr-docker.git
 cd ocr-docker
 ```
-
+<!-- 
 - Make sure the volume is mounted correctly in `docker-compose.yml`
     - The default path assumes the following file structure
 
@@ -319,7 +224,7 @@ cd ocr-docker
 │   └── docker-compose.yml
 │
 └── training_ws/
-```
+``` -->
 
 - Pull the base image from Docker Hub
 
@@ -332,14 +237,28 @@ docker pull mwoodward6/nekton:humble
 docker build -t ocr-docker:humble .
 ```
 
-## Step 2: Run the docker container
+## Step 2: Install any ROS pacakges 
+
+- As an example, we will install [differential_drive_robot](https://github.com/oc-robotics/differential_drive_robot) in `src`
+
+```bash
+cd ~/ocr/dev_ws/src
+```
+
+- Clone the repository 
+
+```bash
+git clone git@github.com:oc-robotics/differential_drive_robot.git
+```
+
+## Step 3: Run the docker container
 - Start the container in the background (detached mode)
 
 ```bash
 docker-compose up -d
 ```
 
-- Open an interactive bash shell inside the container to run commands 
+- *Optional*: Open an interactive bash shell inside the container to run commands 
 
 ```bash
 docker exec -it ocr-humble-nekton-og bash
@@ -385,3 +304,48 @@ docker-pr 1001 root    4u  IPv6  26542      0t0  TCP *:6080 (LISTEN)
 ```bash
 sudo kill -9 995 1001
 ```
+
+# 1.5 Differential Drive Robot
+
+- Open a terminal (run Terminator in NoVNC) and cd into `dev_ws/src`
+
+```
+cd dev_ws/src
+```
+
+- Build the package 
+
+```
+colcon build --symlink-install
+```
+
+- Source the setup
+
+```
+source install/setup.bash
+```
+
+- Run the Gazebo simulation
+
+```
+ros2 launch differential_drive_robot launch_sim.launch.py
+```
+
+- Visualize in `Rviz`
+
+```bash
+rviz2 -d src/differential_drive_robot/config/diff-drive.rviz
+```
+
+- Drive the Robot with Keyboard Input (open a new terminal inside Terminator and run the following command line)
+
+```
+ros2 run teleop_twist_keyboard teleop_twist_keyboard
+```
+
+-  Note: If using `ros2_control` plugin, /cmd_vel must be remapped as follows:
+
+```
+ros2 run teleop_twist_keyboard teleop_twist_keyboard --ros-args -r /cmd_vel:=/diff_cont/cmd_vel_unstamped
+```
+
