Update diff drive notes

--- a/_posts/2025-07-22-Combined.md
+++ b/_posts/2025-07-22-Combined.md
@@ -309,43 +309,42 @@ sudo kill -9 995 1001
 
 - Open a terminal (run Terminator in NoVNC) and cd into `dev_ws/src`
 
-```
+```bash
 cd dev_ws/src
-```
+````
 
-- Build the package 
+* Build the package
 
-```
+```bash
 colcon build --symlink-install
 ```
 
-- Source the setup
+* Source the setup
 
-```
+```bash
 source install/setup.bash
 ```
 
-- Run the Gazebo simulation
+* Run the Gazebo simulation
 
-```
+```bash
 ros2 launch differential_drive_robot launch_sim.launch.py
 ```
 
-- Visualize in `Rviz`
+* Visualize in `Rviz`
 
 ```bash
 rviz2 -d src/differential_drive_robot/config/diff-drive.rviz
 ```
 
-- Drive the Robot with Keyboard Input (open a new terminal inside Terminator and run the following command line)
+* Drive the Robot with Keyboard Input (open a new terminal inside Terminator and run the following command line)
 
-```
+```bash
 ros2 run teleop_twist_keyboard teleop_twist_keyboard
 ```
 
--  Note: If using `ros2_control` plugin, /cmd_vel must be remapped as follows:
+* Note: If using `ros2_control` plugin, /cmd\_vel must be remapped as follows:
 
-```
+```bash
 ros2 run teleop_twist_keyboard teleop_twist_keyboard --ros-args -r /cmd_vel:=/diff_cont/cmd_vel_unstamped
 ```
-
