Update diff drive notes

--- a/_posts/2025-07-22-Combined.md
+++ b/_posts/2025-07-22-Combined.md
@@ -331,6 +331,9 @@ source install/setup.bash
 ros2 launch differential_drive_robot launch_sim.launch.py
 ```
 
+![picture 42](https://i.imgur.com/SqxKbpF.png)  
+
+
 * Visualize in `Rviz`
 
 ```bash
