--- a/_posts/2025-07-22-Combined.md
+++ b/_posts/2025-07-22-Combined.md
@@ -10,6 +10,7 @@ date: 2025-07-18
 - [1.3 Create Initial Directory Structure](#13-create-initial-directory-structure)
 - [1.4 OCR Docker](#14-ocr-docker)
 - [1.5 Differential Drive Robot](#15-differential-drive-robot)
+- [1.6 Raspberry Pi Setup](#16-raspberry-pi-setup)
 
 
 # 1.1 Recommended Directory Structure
@@ -351,3 +352,36 @@ ros2 run teleop_twist_keyboard teleop_twist_keyboard
 ```bash
 ros2 run teleop_twist_keyboard teleop_twist_keyboard --ros-args -r /cmd_vel:=/diff_cont/cmd_vel_unstamped
 ```
+
+
+# 1.6 Raspberry Pi Setup
+
+This setup uses a Raspberry Pi 4. The OS must be configured by flashing the microSD card with Ubuntu 22.04 (see more) and installing ROS2 Humble.
+
+![picture 43](https://i.imgur.com/xJMgVJ2.png)  
+
+## Setup
+
+- Install [Rapberry Pi Imager](https://www.raspberrypi.com/software/)  
+-  Insert the microSD card and choose OS -> other general purpose SO -> **Ubuntu Desktop 22.04 LTS (64-bit)**
+
+- Set up Ubuntu desktop
+
+- Follow the [instructions](https://random-restart.vercel.app/Software-Documentation/ROS/ROS2-Humble-Installation) for installing ROS2 Humble on the Raspberry Pi
+
+- Todo: Set up SSH on the pi for remote connections
+
+## Connecting Peripherals to the Raspberry Pi
+
+![picture 44](https://i.imgur.com/adBxdjT.png)  
+
+- LCD Screen
+
+    - **Display**: Connect the micro-HDMI port on the Raspberry Pi to the HDMI port on the screen  
+    - **Power/touch screen**: Use a micro-USB cable to connect the LCD screen to a USB port on the Raspberry Pi (not just for power, but also for data)
+
+- Raspberry Pi
+
+-    **Power**: Connect the USB-C port on the Raspberry Pi to a power bank or wall outlet.
+
+![rpi gif](https://piportal.digitalharbor.org/cbfe7e712c4ce6e2deed4e129812df9a/rpi-plug-in.gif)
