--- a/_posts/2025-07-22-Combined.md
+++ b/_posts/2025-07-22-Combined.md
@@ -353,12 +353,11 @@ ros2 run teleop_twist_keyboard teleop_twist_keyboard
 ros2 run teleop_twist_keyboard teleop_twist_keyboard --ros-args -r /cmd_vel:=/diff_cont/cmd_vel_unstamped
 ```
 
-
 # 1.6 Raspberry Pi Setup
 
 This setup uses a Raspberry Pi 4. The OS must be configured by flashing the microSD card with Ubuntu 22.04 (see more) and installing ROS2 Humble.
 
-![picture 43](https://i.imgur.com/xJMgVJ2.png)  
+<img src="https://i.imgur.com/xJMgVJ2.png" width="500">
 
 ## Setup
 
@@ -373,7 +372,7 @@ This setup uses a Raspberry Pi 4. The OS must be configured by flashing the micr
 
 ## Connecting Peripherals to the Raspberry Pi
 
-![picture 44](https://i.imgur.com/adBxdjT.png)  
+<img src="https://i.imgur.com/adBxdjT.png" width="500">
 
 - LCD Screen
 
@@ -384,4 +383,4 @@ This setup uses a Raspberry Pi 4. The OS must be configured by flashing the micr
 
 -    **Power**: Connect the USB-C port on the Raspberry Pi to a power bank or wall outlet.
 
-![rpi gif](https://piportal.digitalharbor.org/cbfe7e712c4ce6e2deed4e129812df9a/rpi-plug-in.gif)
+<img src="https://piportal.digitalharbor.org/cbfe7e712c4ce6e2deed4e129812df9a/rpi-plug-in.gif" width="500">
