--- a/_posts/2025-07-22-Combined.md
+++ b/_posts/2025-07-22-Combined.md
@@ -267,9 +267,7 @@ docker exec -it ocr-humble-nekton-og bash
 
 - Browse [http://localhost:6080/](http://localhost:6080/) to access the remote desktop via VNC
 
-<img src="https://ubuntu-mate.community/uploads/default/original/3X/e/5/e5b38828e447662a0035affe589d1f563d22984a.png" alt="novnc" width="300" />
-
-
+![picture 45](https://i.imgur.com/h7OSLJJ.png) 
 
 - Stop the container
 
