Cleaned up UI and added modals to home page

--- a/_posts/2025-07-28-urc.md
+++ b/_posts/2025-07-28-urc.md
@@ -13,7 +13,6 @@ date: 2025-07-28
   height="600"
   style="border: none;">
 </iframe>
-
 <p style="text-align: center; margin-top: 1rem;">
   <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSElbn1UWnPhKP2Krqkw6txoZDUoJm1ZS0DgQ0UR_tvcwO8s2Ppe7jzhh4gUb_IguLWmDfpeMSEQjdT/pubhtml" target="_blank" rel="noopener noreferrer">
     View spreadsheet
@@ -31,38 +30,9 @@ date: 2025-07-28
   </a>
 </p> -->
 
-<style>
-  .doc-embed-container {
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 0.5rem;
-    background: #fafafa;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-    margin-bottom: 1.5rem;
-  }
+<!-- <style>
 
-  .doc-embed-container iframe {
-    width: 100%;
-    height: 700px;
-    border: none;
-    border-radius: 4px;
-  }
-
-  .doc-embed-container .doc-link {
-    text-align: right;
-    margin-top: 0.5rem;
-  }
-
-  .doc-embed-container .doc-link a {
-    font-size: 0.9rem;
-    color: #0366d6;
-    text-decoration: none;
-  }
-
-  .doc-embed-container .doc-link a:hover {
-    text-decoration: underline;
-  }
-</style>
+</style> -->
 
 ## URC Requirements
 
